[gd_scene load_steps=10 format=3 uid="uid://b5csifcrytegw"]

[ext_resource type="Script" uid="uid://dxwhkauicy0n2" path="res://game/scripts/ui/pause_menu.gd" id="1_78msb"]
[ext_resource type="Shader" uid="uid://cxwgrnk28tuvt" path="res://game/resources/shaders/blur.gdshader" id="2_bgr1x"]
[ext_resource type="PackedScene" uid="uid://xmhpn38awq6d" path="res://game/scenes/ui/menu_button.tscn" id="2_ig7np"]
[ext_resource type="PackedScene" uid="uid://8agf2mc41tgx" path="res://game/scenes/ui/quit_warning.tscn" id="4_klkif"]
[ext_resource type="PackedScene" uid="uid://vxk46hnnh0ba" path="res://game/scenes/ui/options_panel.tscn" id="5_16opm"]

[sub_resource type="Animation" id="Animation_bcgww"]
resource_name = "close"
length = 0.25
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("background_blur:material:shader_parameter/blur_radius")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [15.0, 1.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_ua2a6"]
resource_name = "open"
length = 0.25
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("background_blur:material:shader_parameter/blur_radius")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0, 15.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0uhvd"]
_data = {
&"close": SubResource("Animation_bcgww"),
&"open": SubResource("Animation_ua2a6")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1hb26"]
shader = ExtResource("2_bgr1x")
shader_parameter/blur_radius = 15.0

[node name="pause_menu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_78msb")

[node name="animator" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_0uhvd")
}

[node name="background_blur" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_1hb26")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -320.0
offset_bottom = -60.0
grow_horizontal = 2
grow_vertical = 2

[node name="panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -160.0
offset_right = 240.0
offset_bottom = 160.0
grow_horizontal = 2
grow_vertical = 2

[node name="margin_container" type="MarginContainer" parent="panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="menu_buttons" type="VBoxContainer" parent="panel/margin_container"]
layout_mode = 2
alignment = 1

[node name="resume_button" parent="panel/margin_container/menu_buttons" instance=ExtResource("2_ig7np")]
layout_mode = 2
text = "Resume"

[node name="options_button" parent="panel/margin_container/menu_buttons" instance=ExtResource("2_ig7np")]
layout_mode = 2
text = "Options"

[node name="quit_button" parent="panel/margin_container/menu_buttons" instance=ExtResource("2_ig7np")]
layout_mode = 2
text = "Quit"

[node name="quit_warning" parent="panel/margin_container" instance=ExtResource("4_klkif")]
visible = false
layout_mode = 2

[node name="options_panel" parent="." instance=ExtResource("5_16opm")]
visible = false
layout_mode = 1
offset_left = -240.0
offset_top = -160.0
offset_right = 240.0
offset_bottom = 160.0

[connection signal="animation_finished" from="animator" to="." method="_on_animator_animation_finished"]
[connection signal="pressed" from="panel/margin_container/menu_buttons/resume_button" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="panel/margin_container/menu_buttons/options_button" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="panel/margin_container/menu_buttons/quit_button" to="." method="_on_quit_button_pressed"]
[connection signal="quit_canceled" from="panel/margin_container/quit_warning" to="." method="_on_quit_warning_quit_canceled"]
[connection signal="quit_confirmed" from="panel/margin_container/quit_warning" to="." method="_on_quit_warning_quit_confirmed"]
